Fixed layout issue on Find Us page.

--- a/themes/inhabitent/sass/_findus.scss
+++ b/themes/inhabitent/sass/_findus.scss
@@ -1,6 +1,10 @@
 .page {
+  .site-content {
+    display: flex;
+  }
+
   .content-area {
-    width: 100%;
+    width: 69%;
     padding: 125px 78px;
     border-right: 1px solid $brand_color_lightgrey;
   }
